assets name changed

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
 
 .background {
   height: 77vh;
-  background-image: url(./assets/b1.png);
+  background-image: url(./assets/backgroung.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
